rns-lang/tests/snapshots/error-lexer-strings-unsupported_octal_escape_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code "\123"
----- STDERR -----
[E001] Error: invalid escape sequence
   ╭─[ test_data/integration/error/lexer/strings/unsupported_octal_escape.rns:2:9 ]
   │
 2 │ .code "\123"
   │         ┬  
   │         ╰── invalid escape sequence '\1'
   │ 
   │ Note: The character '\1' is not a valid escape sequence.
───╯
----- HASH -----
not generated
