rns-lang/tests/snapshots/error-lexer-strings-unterminated_string_after_escape.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String ending with backslash\
----- STDERR -----
[E001] Error: unterminated string literal
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/lexer/strings/unterminated_string_after_escape.ja:2:1 ]
   │
 2 │ "String ending with backslash\
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
