rns-lang/tests/snapshots/error-lexer-strings-unterminated_string_after_escape_with_newline_werror.snap.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with backslash escape followed by newline \
.end
----- STDERR -----
Error: unterminated string literal
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/strings/unterminated_string_after_escape_with_newline.ja:2:1 ]
   │
 2 │ "String with backslash escape followed by newline \
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
